Iris: remove duplication in the struggle intervention paths
The completion frame that clears the client's in-flight request was
written out nine times in handleDecision and four times in
handleConfirmClose, with identical arguments at every site. One of those
copies had already drifted once. Each method now defines it once.

PyrisStatusUpdateService carried the confirm_close and decide branches as
the same skeleton twice, down to a verbatim copy of the non-decision
fallback. Only the field that marks the terminal frame differs, so the
gate names that difference and the body is written once.

writeEpisodeOutcome and recordOutcomeUnderLock were two implementations
of one rule, and they had diverged: the first mirrored the outcome that
actually stands onto the message row, the second mirrored the incoming
one. Harmless today because the mirror is itself first-write-wins, but
the message row must not be able to claim an outcome the registry
rejected. The former now delegates to the latter, which mirrors the
standing value.

The two callers that only need the episode's smallest-id target no
longer load whole IrisMessage entities for it. Those carry an EAGER
content collection and a session, i.e. the hint text the projection
never looks at, so they get the ids instead.

Four helpers in AbstractIrisIntegrationTest read the course settings,
changed one field and wrote them back through the five-argument factory,
which hard-codes proactiveStruggleEnabled to false and leaves the legacy
build-trigger decision undecided. A test that enabled proactive struggle
and then called enableIrisFor switched the feature off again without
saying so. They now carry both fields through.

Also drops the IrisMessageResponseDTO constructor overload that no
production code calls any more, and moves a javadoc block that sat above
the wrong method.